from datetime import datetime
import html

# PATTERN 4: BUILDER
class OCRReport:
    """The complex object being built."""
    def __init__(self):
        self.header = ""
        self.content = ""
        self.metadata = ""
        self.footer = ""

    def __str__(self):
        """Formats the report for Telegram Markdown."""
        return f"{self.header}\n\n{self.content}\n\n{self.metadata}\n{self.footer}"

class ReportBuilder:
    """Builder class to construct the OCRReport step by step."""
    def __init__(self):
        self.reset()

    def reset(self):
        self._report = OCRReport()
        return self

    def set_header(self, title: str):
        self._report.header = f"📑 **{title}**"
        return self

    def set_content(self, text: str):
        safe_text = html.escape(text[:3500]) if text else "No text found."
        self._report.content = f"<pre>{safe_text}</pre>"
        return self

    def set_metadata(self, author_name: str, doc_type: str):
        current_time = datetime.now().strftime("%Y-%m-%d %H:%M")
        self._report.metadata = f"👤 *Author:* {author_name} | 🏷 *Type:* {doc_type}\n🕒 *Processed at:* {current_time}"
        return self

    def set_footer(self):
        self._report.footer = "🤖 _Generated by SmartHub Engine_"
        return self

    def get_result(self) -> OCRReport:
        """Returns the final built report and resets the builder."""
        report = self._report
        self.reset()
        return report